@@ -293,6 +293,14 @@ LDFLAGS, as Boost::Thread detection will fail without it, even if
 Boost::Thread is installed.</p>
 <p>If you need to set these variables, it may be a good idea to add those lines
 to your <tt class="docutils literal"><span class="pre">~/.profile</span></tt> or <tt class="docutils literal"><span class="pre">~/.tcshrc</span></tt> depending on your shell.</p>
+<p>If the boost libraries are named with a suffix on your platform, you may use
+the <tt class="docutils literal"><span class="pre">--with-boost-thread=</span></tt> option to specify the suffix used for the thread
+library in this case. For more information about these options, run:</p>
+<pre class="literal-block">
+./configure --help
+</pre>
+<p>On gentoo the boost libraries that are built with multi-threading support have
+the suffix <tt class="docutils literal"><span class="pre">mt</span></tt>.</p>
 <p>You know that the boost libraries were found if you see the following output
 from the configure script:</p>
 <pre class="literal-block">
